--- a/public/index.html
+++ b/public/index.html
@@ -1,143 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Add New Recipe</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 30px;
-      background: #f8f9fa;
-    }
-    h1 {
-      text-align: center;
-    }
-    form {
-      max-width: 700px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
-    }
-    input[type="text"], input[type="number"], textarea, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    .inline {
-      display: flex;
-      gap: 10px;
-    }
-    .inline > div {
-      flex: 1;
-    }
-    .section {
-      margin-top: 20px;
-      padding-top: 10px;
-      border-top: 1px solid #ddd;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #28a745;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #218838;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login / Register</title>
 </head>
 <body>
-
-  <h1>Add New Recipe</h1>
-
-  <form action="/submit-recipe" method="POST">
-
-    <label for="title">Recipe Title:</label>
-    <input type="text" id="title" name="title" required>
-
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" rows="3"></textarea>
-
-    <div class="inline">
-      <div>
-        <label for="category">Category:</label>
-        <select id="category" name="category_id" required>
-          <option value="">--Select--</option>
-          <option value="1">Dessert</option>
-          <option value="2">Main Course</option>
-          <option value="3">Breakfast</option>
-          <option value="4">Appetizer</option>
-          <option value="5">Side Dish</option>
-        </select>
-      </div>
-      <div>
-        <label for="cooking_time">Cooking Time (minutes):</label>
-        <input type="number" id="cooking_time" name="cooking_time_minutes" required>
-      </div>
-      <div>
-        <label for="servings">Servings:</label>
-        <input type="number" id="servings" name="servings" required>
-      </div>
-    </div>
-
-    <div class="section">
-      <h3>Ingredients (3 examples)</h3>
-      <div class="inline">
-        <div>
-          <label>Ingredient Name:</label>
-          <input type="text" name="ingredient_name[]">
-        </div>
-        <div>
-          <label>Quantity:</label>
-          <input type="text" name="quantity[]">
-        </div>
-        <div>
-          <label>Unit:</label>
-          <input type="text" name="unit[]">
-        </div>
-      </div>
-
-      <div class="inline">
-        <div><input type="text" name="ingredient_name[]"></div>
-        <div><input type="text" name="quantity[]"></div>
-        <div><input type="text" name="unit[]"></div>
-      </div>
-
-      <div class="inline">
-        <div><input type="text" name="ingredient_name[]"></div>
-        <div><input type="text" name="quantity[]"></div>
-        <div><input type="text" name="unit[]"></div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h3>Instructions (Steps)</h3>
-      <label for="instruction_1">Step 1:</label>
-      <textarea name="instructions[]" id="instruction_1" rows="2"></textarea>
-
-      <label for="instruction_2">Step 2:</label>
-      <textarea name="instructions[]" id="instruction_2" rows="2"></textarea>
-
-      <label for="instruction_3">Step 3:</label>
-      <textarea name="instructions[]" id="instruction_3" rows="2"></textarea>
-    </div>
-
-    <button type="submit">Submit Recipe</button>
-
+  <h1>Login or Register</h1>
+  <form id="auth-form">
+    <label>Email: <input type="email" name="email" required /></label><br />
+    <label>Password: <input type="password" name="password" required /></label><br />
+    <button type="submit">Login</button>
+    <button type="button" id="register-btn">Register</button>
   </form>
+  <p id="message"></p>
 
+  <script>
+    const form = document.getElementById("auth-form");
+    const message = document.getElementById("message");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      const res = await fetch("/api/auth/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          email: formData.get("email"),
+          password: formData.get("password")
+        })
+      });
+      const data = await res.json();
+      if (res.ok) {
+        localStorage.setItem("token", data.token);
+        message.textContent = "Login successful";
+        window.location.href = "recipes.html";
+      } else {
+        message.textContent = data.message;
+      }
+    });
+
+    document.getElementById("register-btn").addEventListener("click", async () => {
+      const formData = new FormData(form);
+      const res = await fetch("/api/auth/register", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          email: formData.get("email"),
+          password: formData.get("password")
+        })
+      });
+      const data = await res.json();
+      message.textContent = data.message;
+    });
+  </script>
 </body>
 </html>
