--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/style.css">
   <title>Login / Register</title>
 </head>
 <body>
-  <h1>Login or Register</h1>
-  <form id="auth-form">
-    <label>Email: <input type="email" name="email" required /></label><br />
-    <label>Password: <input type="password" name="password" required /></label><br />
-    <button type="submit">Login</button>
-    <button type="button" id="register-btn">Register</button>
-  </form>
-  <p id="message"></p>
-
+  <div align="center">
+    <div class="card">
+      <h1>Login or Register</h1>
+      <form id="auth-form">
+        <div><label>Email:</label></div>
+        <div><input type="email" name="email" required></div><br>
+        <div><label>Password:</label></div>
+        <div><input type="password" name="password" required></div><br>
+        <div>
+          <button class="button-index" type="submit">login</button>
+          <button class="button-index" type="button" id="register-btn">register</button>
+        </div>
+      </form>
+      <p id="message"></p>
+    </div>
+  </div>
+  
   <script>
     const form = document.getElementById("auth-form");
     const message = document.getElementById("message");
